ADD: source link

--- a/style.css
+++ b/style.css
@@ -153,3 +153,11 @@ body {
     opacity: 0;
   }
 }
+
+/* source link */
+#source {
+  bottom: 20px;
+  display: block;
+  position: fixed;
+  right: 20px;
+}
